# snakemake-wfcommons

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  wfcommons-converter.py
snakemake_wfcommons/: __init__.py
