[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snakemake_wfcommons"
version = "0.1.0"
description = "Python tool to convert Snakemake metadata to wfcommons single JSON files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License"
]
dependencies = [
    "wfcommons==1.0",
    "snakemake"
]
[project.urls]
Homepage = "https://github.com/tud-zih-tools/snakemake-wfcommons"
Issues = "https://github.com/tud-zih-tools/snakemake-wfcommons/issues"
